<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sach.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.sach.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_download"
        android:name="com.example.sach.ui.download.DownloadFragment"
        android:label="@string/title_download"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.sach.ui.dashboard.DashboardFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.sach.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>
