<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/pngwing"
            android:layout_margin="8dp"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXX"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:divider="@color/colorPrimary">

        <TextView
            android:textSize="24sp"
            android:text="@string/change_password"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="0.9"/>
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right|center"
            android:src="@drawable/ic_arrow_right"
            android:layout_weight="0.1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
        android:id="@+id/deleteHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:textSize="24sp"
            android:text="@string/delete_history"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="0.9"/>
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right|center"
            android:src="@drawable/ic_arrow_right"
            android:layout_weight="0.1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="12dp">
    <TextView
        android:id="@+id/change_language"
        android:textSize="24sp"
        android:text="@string/change_language"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.9"/>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <TextView
            android:id="@+id/change_font"
            android:textSize="24sp"
            android:text="@string/change_font"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.9"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_weight="0.9">
        <TextView
            android:id="@+id/change_fontSize"
            android:textSize="24sp"
            android:text="@string/choose_fontSize"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.9"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:textSize="24sp"
            android:text="@string/logout"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.9"/>
    </LinearLayout>
</LinearLayout>